# solaris

./: .editorconfig  .gitignore  .readthedocs.yaml  2  CONTRIBUTING.md  LICENSE  README.md  SBOM-VULNS.md  SBOM.md  deployment-instructions.txt  docker-compose.archive.yml  docker-compose.dash.yml  docker-compose.notify.yml  docker-compose.requirements.yml  docker-compose.yaml  docker-compose.yml  mkdocs.yml  package-lock.json  package.json  pm2.config.js
.github/: FUNDING.yml
client/: .env.example  .eslintrc.js  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vue.config.js
common/: package-lock.json  package.json  tsconfig.json
docs/: guide.md  index.md  overview.md  technologies.md
scripts/: setup-ubuntu-20.04.sh
server/: .env.example  Dockerfile  (+8 more)
solaris-archive/: Cargo.toml  Dockerfile
solaris-archive/src/: config.rs  main.rs
solaris-archive/src/api/: handlers.rs  mod.rs  router.rs
solaris-archive/src/archive/: metadata.rs  mod.rs  scanner.rs  writer.rs
solaris-archive/src/db/: mod.rs  models.rs  mongo.rs
solaris-archive/src/storage/: layout.rs  mod.rs  reader.rs
solaris-dash/: CHANGES.md  Cargo.toml  Dockerfile
solaris-dash/data/: security_seed.json
solaris-dash/src/: config.rs  main.rs
solaris-dash/src/api/: handlers.rs  logs.rs  mod.rs  router.rs  sse.rs
solaris-dash/src/collectors/: archive.rs  docker.rs  mod.rs  mongodb.rs  nats.rs  security.rs  services.rs
solaris-dash/src/dashboard/: mod.rs
solaris-dash/src/dashboard/static/: app.js  index.html  style.css
solaris-dash/src/store/: metrics.rs  mod.rs  security.rs
solaris-notify/: Cargo.toml  Dockerfile
solaris-notify/src/: config.rs  main.rs
solaris-notify/src/api/: mod.rs  router.rs  ws.rs
solaris-notify/src/api/handlers/: mod.rs  notifications.rs  preferences.rs  webhooks.rs
solaris-notify/src/auth/: session.rs
solaris-notify/src/bus/: nats.rs
solaris-notify/src/channels/: inbox.rs  mod.rs  webhook.rs  websocket.rs
solaris-notify/src/db/: models.rs  mongo.rs
solaris-notify/src/ingestion/: mod.rs  transformer.rs  watcher.rs
solaris-notify/src/router/: dispatcher.rs  mod.rs
solaris-notify/src/templates/: mod.rs
(+1724 files in other folders)
